<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Circus Watch Faces</string>
    <string name="banner_ad_unit_id">ca-app-pub-8883827965457604/2801243541</string>
    <string name="title_activity_circus_main_ancora">Circus Main</string>
    <string name="spiega">This app is intended for Android Wear, you need an Android Wear smartwatch if you want to use it.\n\nRealized by Leonardo Gandini, drawings and original design by Roberta Pagnoni</string>
    <string name="knowmore">Want to know more?</string>
    <string name="leoname">Leonardo Gandini</string>
    <string name="robename">Roberta Pagnoni</string>
    <string name="donatespiega">This app is 100\% free and it will remain so!\nHowever if you want to support our work , you can click the donate button to remove ads, a simple and really inexpensive way to say thanks for our work.\n\nIn any case\.\.\. enjoy your new watch faces!</string>
    <string name="donate">Donate</string>
    <string name="cheers">Thanks for supporting our work!!</string>

</resources>
