<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="false"
    android:scrollbars="none"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Relativo"
        android:fitsSystemWindows="true"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.watch.lgandini.com.skyrimwatchfaces.smatoacty"
        android:touchscreenBlocksFocus="false"
        android:background="@color/background_material_light"
        android:nestedScrollingEnabled="true">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </com.google.android.gms.ads.AdView>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/logo"
            android:src="@drawable/ic_launcher"
            android:layout_below="@+id/adView"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/spiega"
            android:id="@+id/textView2"
            android:textColor="#ff000000"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/logo"
            android:paddingTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/knowmore"
            android:id="@+id/textView3"
            android:textColor="#ffe8b800"
            android:textSize="22sp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leoname"
            android:id="@+id/leobutton"
            android:nestedScrollingEnabled="true"
            android:onClick="buttonOnClick"
            android:layout_alignTop="@+id/robebutton"
            android:layout_alignRight="@+id/logo"
            android:layout_alignEnd="@+id/logo"
            android:layout_marginRight="75dp"
            android:layout_marginEnd="75dp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robename"
            android:id="@+id/robebutton"
            android:nestedScrollingEnabled="true"
            android:onClick="buttonOnClickroberta"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/logo"
            android:layout_alignStart="@+id/logo"
            android:layout_marginLeft="82dp"
            android:layout_marginStart="82dp" />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/donate"
            android:id="@+id/granabutton"
            android:nestedScrollingEnabled="true"
            android:onClick="buttonOnClickGrana"
            android:layout_below="@+id/leobutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ffffa802" />
        droid:text="@string/knowmore"
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/donatespiega"
            android:id="@+id/textView"
            android:layout_below="@+id/granabutton"
            android:textColor="#000000"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>