<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewLibera"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="false"
    android:scrollbars="none"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/relativolibero01"
        android:fitsSystemWindows="true"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.watch.lgandini.com.skyrimwatchfaces.smatoacty"
        android:touchscreenBlocksFocus="false"
        android:background="@color/background_material_light"
        android:nestedScrollingEnabled="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/spiega"
            android:id="@+id/textView2"
            android:textColor="#ff000000"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:paddingTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/knowmore"
            android:id="@+id/textView3"
            android:textColor="#ffe8b800"
            android:textSize="22dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leoname"
            android:id="@+id/leobutton"
            android:nestedScrollingEnabled="true"
            android:onClick="buttonOnClick"
            android:layout_below="@+id/textView3"
            android:layout_alignRight="@+id/imageView"
            android:layout_alignEnd="@+id/imageView"
            android:layout_marginRight="74dp"
            android:layout_marginEnd="74dp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robename"
            android:id="@+id/robebutton"
            android:nestedScrollingEnabled="true"
            android:onClick="buttonOnClickroberta"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginLeft="81dp"
            android:layout_marginStart="81dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cheers"
            android:id="@+id/textView"
            android:layout_marginTop="29dp"
            android:textStyle="bold"
            android:textColor="#ffff001d"
            android:layout_below="@+id/leobutton"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView2"
            android:src="@drawable/emoji_android_clinking_beer_mugs"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</ScrollView>